; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libthr/sys/extr_thr_error.c___error_threaded.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libthr/sys/extr_thr_error.c___error_threaded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pthread = type { i32 }

@_thr_initial = common dso_local global %struct.pthread* null, align 8
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @__error_threaded() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.pthread*, align 8
  %3 = load %struct.pthread*, %struct.pthread** @_thr_initial, align 8
  %4 = icmp ne %struct.pthread* %3, null
  br i1 %4, label %5, label %17

5:                                                ; preds = %0
  %6 = call %struct.pthread* (...) @_get_curthread()
  store %struct.pthread* %6, %struct.pthread** %2, align 8
  %7 = load %struct.pthread*, %struct.pthread** %2, align 8
  %8 = icmp ne %struct.pthread* %7, null
  br i1 %8, label %9, label %16

9:                                                ; preds = %5
  %10 = load %struct.pthread*, %struct.pthread** %2, align 8
  %11 = load %struct.pthread*, %struct.pthread** @_thr_initial, align 8
  %12 = icmp ne %struct.pthread* %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %9
  %14 = load %struct.pthread*, %struct.pthread** %2, align 8
  %15 = getelementptr inbounds %struct.pthread, %struct.pthread* %14, i32 0, i32 0
  store i32* %15, i32** %1, align 8
  br label %18

16:                                               ; preds = %9, %5
  br label %17

17:                                               ; preds = %16, %0
  store i32* @errno, i32** %1, align 8
  br label %18

18:                                               ; preds = %17, %13
  %19 = load i32*, i32** %1, align 8
  ret i32* %19
}

declare dso_local %struct.pthread* @_get_curthread(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
